<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_distance"
    android:background="@drawable/cut_card_background2">

    <GridLayout
        android:id="@+id/Titrefrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_column="0"
            app:cardCornerRadius="8dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/blue2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distances_maj"
                    android:textSize="18sp"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

    <TextView
        android:id="@+id/citation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Titrefrag"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/cit_distance"
        android:textStyle="italic"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/citation"
        android:layout_marginBottom="0dp"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="Input"
            android:hint="@string/input"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputs_distance" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:layout_marginVertical="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/blue2"
        android:textColor="@color/yellow"
        android:text="@string/convertir" />

    <LinearLayout
        android:id="@+id/linear_kilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometress"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/kilometress"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_heca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_kilo"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hectometres"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Hectometres"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_deca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_heca"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decametres"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/decametres"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_gram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_deca"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metress"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/metress"
            android:inputType="number" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_deci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_gram"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimetres"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/decimetres"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_centi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_deci"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimetres"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/centimetres"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_mili"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_centi"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millimetres"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextNumber8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/millimetres"
            android:inputType="number" />

    </LinearLayout>
</RelativeLayout>